# Computer-Simulator-8085

./: CMakeLists.txt  README.md  gui_main.cpp  gui_main.hpp  imgui.ini  main.cpp
ComputerSimulator8085/: CMakeLists.txt  GuiManager.cpp  GuiManager.h  GuiManager.hpp  main.cpp
ComputerSimulator8085/Assembler/: Assembler.cpp  Assembler.hpp  CMakeLists.txt
ComputerSimulator8085/Core/: CMakeLists.txt  Computer.cpp  Computer.hpp  computer.cpp  computer.hpp  namespaceDeclaration.h
ComputerSimulator8085/Core/Bus/: Bus.cpp  Bus.hpp  CMakeLists.txt
ComputerSimulator8085/Core/Intel8085Processor/: CMakeLists.txt  intel8085.cpp  intel8085.hpp
ComputerSimulator8085/Core/Intel8085Processor/Assembler/: Assembler.cpp  Assembler.hpp
ComputerSimulator8085/Core/Memory/: CMakeLists.txt  Memory.cpp  Memory.hpp  memory.cpp  memory.hpp
Core/: CMakeLists.txt  computer.cpp  computer.hpp
Core/Bus/: CMakeLists.txt
Core/Memory/: CMakeLists.txt  memory.cpp  memory.hpp
Core/MipsProcessor/: CMakeLists.txt
